--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,33 @@ a {
     font-style: normal;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
 ul {
     list-style-type: none;
+    margin: 0;
 }
 
 .header {
     background-color: #FFFFFF;
+    border-bottom: 1px solid #E7E9FC;
+}
+
+.header .container {
+    display: flex;
+    padding: 14px 156px;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+}
+
+.menu {
+    display: flex;
+    gap: 40px;
 }
 
 .logo {
@@ -25,6 +46,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 74px;
 }
 
 .logo .accent {
@@ -52,6 +74,12 @@ ul {
 
 .address {
     font-style: normal;
+    margin-left: auto;
+}
+
+.address-list {
+    display: flex;
+    gap: 40px;
 }
 
 .address-link {
@@ -73,6 +101,8 @@ ul {
 
 .hero {
     background-color: #2e2f42;
+    padding: 188px;
+    text-align: center;
 }
 
 .hero-title {
@@ -80,8 +110,11 @@ ul {
         font-size: 56px;
         line-height: 1.07;
         letter-spacing: 0.02em;
-        text-align: center;
         color: #FFFFFF;
+        max-width: 496px;
+        margin-bottom: 48px;
+        margin-left: auto;
+        margin-right: auto;
 }
 
 .hero-button {
@@ -93,6 +126,10 @@ ul {
         color: #fff;
         background-color: #4d5ae5;
         cursor: pointer;
+        width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
 }
 
 .hero-button:hover,
@@ -102,6 +139,14 @@ ul {
 
 .vision {
     background-color: #FFFFFF;
+    display: flex;
+    padding: 0 156px;
+    flex-direction: row;
+}
+
+.vision-item {
+    flex-basis:calc((100% - 72px) / 4);
+    max-width: 264px;
 }
 
 .vision-title {
