--- a/css/styles.css
+++ b/css/styles.css
@@ -201,10 +201,14 @@ img {
 
 .team-section {
     background-color: #FFFFFF;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    width:calc((100% - 72px) / 4);
+    border-radius: 0 0 4px 4px;
+    flex-basis: calc((100% - 72px) / 4);
     max-width: 264px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.team-section .container {
+    padding: 32px 16px;
 }
 
 .team-title {
@@ -215,6 +219,7 @@ img {
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
+        margin-bottom: 8px;
 }
 
 .team-text {
@@ -228,10 +233,7 @@ img {
 
 .portfolio {
     background-color: #FFFFFF;
-}
-
-.portfolio-section {
-    background-color: #FFFFFF;
+    padding: 120px 156px;
 }
 
 .portfolio-header {
@@ -242,6 +244,28 @@ img {
         text-align: center;
         color: #2e2f42;
         text-transform: capitalize;
+        margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+    justify-content: center;
+}
+
+.portfolio-section {
+    background-color: #FFFFFF;
+    flex-basis: calc((100% - 72px) / 4);
+    max-width: 360px;
+}
+
+.portfolio-section .container {
+    padding: 32px 16px;
+    border-right: 1px solid #e7e9fc;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
 }
 
 .portfolio-title {
@@ -250,6 +274,7 @@ img {
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        margin-bottom: 8px;
 }
 
 .portfolio-text {
@@ -262,6 +287,7 @@ img {
 
 .footer { 
     background-color: #2e2f42;
+    padding: 100px 156px;
 }
 
 .footer-logo {
@@ -290,4 +316,6 @@ img {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
+        max-width: 264px;
+        margin-top: 16px;
 }
