--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ img {
         color: #404bbf;
 }
 
-.hero {
+.hero .container {
     background-color: #2e2f42;
     padding: 188px;
     text-align: center;
@@ -143,7 +143,7 @@ img {
     background-color: #404BBF
 }
 
-.vision {
+.vision .container {
     background-color: #FFFFFF;
     padding: 120px 156px;
 }
@@ -176,7 +176,7 @@ img {
         color: #434455;
 }
 
-.team {
+.team .container {
     background-color: #f4f4fd;
     padding: 120px 156px;
 }
@@ -231,7 +231,7 @@ img {
         color: #434455;
 }
 
-.portfolio {
+.portfolio .container {
     background-color: #FFFFFF;
     padding: 120px 156px;
 }
@@ -285,7 +285,7 @@ img {
         color: #434455;
 }
 
-.footer { 
+.footer .container { 
     background-color: #2e2f42;
     padding: 100px 156px;
 }
