--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ img {
 .header {
     background-color: #FFFFFF;
     border-bottom: 1px solid #E7E9FC;
+    width: 1158px;
 }
 
 .header .container {
@@ -52,7 +53,7 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-right: 74px;
+    margin-right: 76px;
 }
 
 .logo .accent {
