--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,11 @@ img {
 
 .header .container {
     display: flex;
-    padding: 24px 15px;
+    padding-top: 24px;
+    padding-right: 15px;
+    padding-bottom: 24px;
+    padding-left: 15px;
+    margin: 0 auto;
     width: 1158px;
 }
 
