--- a/css/styles.css
+++ b/css/styles.css
@@ -202,9 +202,12 @@ img {
         color: #434455;
 }
 
+.team {
+    padding: 120px 0;
+}
+
 .team .container {
     background-color: #f4f4fd;
-    padding: 120px 0;
 }
 
 .team-header {
@@ -257,12 +260,16 @@ img {
         color: #434455;
 }
 
-.portfolio .container {
+.portfolio {
     background-color: #FFFFFF;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    padding-right: 156px;
-    padding-left: 156px;
+        padding-top: 120px;
+        padding-bottom: 120px;
+}
+
+.portfolio .container {
+    width: 1158px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .portfolio-header {
@@ -286,7 +293,7 @@ img {
 
 .portfolio-section {
     background-color: #FFFFFF;
-    flex-basis: calc((100% - 48px) / 4);
+    flex-basis: calc((100% - 48px) / 3);
     max-width: 360px;
 }
 
@@ -316,10 +323,10 @@ img {
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer .container { 
-    padding: 100px 0;
     width: 1158px;
     margin-right: auto;
     margin-left: auto;
