--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,6 @@ img {
     border-bottom: 1px solid #E7E9FC;
     display: flex;
     justify-content: center;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .header .container {
@@ -78,6 +76,8 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    display: block;
+    padding: 24px 0;
 }
 
 .nav-link:hover,
@@ -89,6 +89,7 @@ img {
     font-style: normal;
     margin-left: auto;
     margin-right: 0;
+    padding: 24px 0;
 }
 
 .address-list {
@@ -193,7 +194,7 @@ img {
 }
 
 .vision-item {
-    width: calc((100% - 72px) / 4);
+    width: calc((100% - 3 * 24px) / 4);
     max-width: 264px;
 }
 
