--- a/css/styles.css
+++ b/css/styles.css
@@ -86,8 +86,24 @@ img {
     padding: 24px 0;
 }
 
+.nav-link.current {
+    position: relative;
+}
+
+.nav-link.current::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+}
+
 .nav-link:hover,
-.nav-link:focus {
+.nav-link:focus,
+.nav-link.current {
     color: #404bbf;
 }
 
@@ -121,8 +137,16 @@ img {
 }
 
 .hero {
-    background-color: #2e2f42;
     padding: 188px 0;
+    background-color: #2e2f42;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+    url(../images/people-office\ 1-min.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .hero .container {
@@ -192,6 +216,16 @@ img {
 
 .vision-item {
     width: calc((100% - 3 * 24px) / 4);
+}
+
+.vision-item .container {
+    background-color: #f4f4fd;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 .vision-title {
@@ -265,6 +299,23 @@ img {
         color: #434455;
 }
 
+.team-box .container {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    margin-top: 8px;
+}
+
+.team-link {
+    display: flex;
+    background-color: #4d5ae5;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
 .portfolio {
     background-color: #FFFFFF;
         padding-top: 120px;
@@ -293,6 +344,41 @@ img {
 .portfolio-section {
     background-color: #FFFFFF;
     width: calc((100% - 48px) / 3);
+}
+
+.portfolio-pic {
+    position: relative;
+    overflow: hidden;
+}
+
+.overlay {
+    padding: 40px 32px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-section:hover .overlay {
+    transform: translateY(0);
+}
+
+.portfolio-box {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-section:hover .portfolio-box {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-box {
@@ -324,6 +410,12 @@ img {
     padding: 100px 0;
 }
 
+.footer .container {
+    display: flex;
+    flex-direction: row;
+    gap: 120px;
+}
+
 .footer-logo {
     font-family: "Raleway", sans-serif;
         font-weight: 700;
@@ -353,4 +445,35 @@ img {
         letter-spacing: 0.02em;
         color: #f4f4fd;
         max-width: 264px;
+}
+
+.footer-links {
+    display: flex;
+        flex-direction: row;
+        gap: 16px;
+        margin-top: 16px;
+}
+
+.footer-link {
+    display: flex;
+        background-color: #4d5ae5;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        justify-content: center;
+        align-items: center;
+}
+
+.footer-link:hover {
+    background-color: #31d0aa;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.sm-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
 }
